Fix preview overflow

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -102,6 +102,7 @@
   justify-content: center;
   height: 335px;
   margin-right: 50px;
+  overflow: hidden;
   width: 335px;
 
   @media (max-width: 768px) {
